RESOLVED FIXED234250
[MacCatalyst] fix iOSMac after refactor in r286899
https://bugs.webkit.org/show_bug.cgi?id=234250
Summary [MacCatalyst] fix iOSMac after refactor in r286899
Kyle Piddington
Reported 2021-12-13 10:11:08 PST
[MacCatalyst] fix iOSMac after refactor in r286899
Attachments
Patch (3.30 KB, patch)
2021-12-13 10:14 PST, Kyle Piddington
no flags
Patch for landing (3.32 KB, patch)
2021-12-13 10:42 PST, Kyle Piddington
no flags
Kyle Piddington
Comment 1 2021-12-13 10:14:44 PST
EWS Watchlist
Comment 2 2021-12-13 10:15:54 PST
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Dean Jackson
Comment 3 2021-12-13 10:18:08 PST
Comment on attachment 447022 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=447022&action=review > Source/ThirdParty/ANGLE/ChangeLog:11 > + Also includes a longer term fix for > + https://bugs.webkit.org/show_bug.cgi?id=233977 > + > + Tested builds on mac, iOS, TV SDKs, plus iOSMac I think you have some tabs here!
Myles C. Maxfield
Comment 4 2021-12-13 10:37:02 PST
Comment on attachment 447022 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=447022&action=review > Source/ThirdParty/ANGLE/src/common/platform.h:-135 > -# undef TARGET_OS_IOS 🎉🎉🎉
Kyle Piddington
Comment 5 2021-12-13 10:42:59 PST
Created attachment 447026 [details] Patch for landing
EWS
Comment 6 2021-12-13 12:01:05 PST
Committed r286964 (245187@main): <https://commits.webkit.org/245187@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447026 [details].
Radar WebKit Bug Importer
Comment 7 2021-12-13 12:02:32 PST
Note You need to log in before you can comment on or make changes to this bug.