[MacCatalyst] fix iOSMac after refactor in r286899 https://bugs.webkit.org/show_bug.cgi?id=234250

Reviewed by Dean Jackson.

Also includes a longer term fix for
https://bugs.webkit.org/show_bug.cgi?id=233977

Tested builds on mac, iOS, TV SDKs, plus iOSMac

* src/common/platform.h:
* src/libANGLE/renderer/metal/gen_mtl_format_table.py:
(gen_image_map_switch_string):
* src/libANGLE/renderer/metal/mtl_format_table_autogen.mm:
(rx::mtl::Format::init):



Canonical link: https://commits.webkit.org/245187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286964 268f45cc-cd09-0410-ab3c-d52691b4dbfc